@@ -30,7 +30,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.AclEntry;
 import java.nio.file.attribute.AclEntryPermission;
 import java.nio.file.attribute.AclEntryType;
@@ -184,7 +183,9 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
 
     private static final Logger LOGGER = Logger.getLogger(CliGitAPIImpl.class.getName());
 
+    @Serial
     private static final long serialVersionUID = 1;
+
     static final String SPARSE_CHECKOUT_FILE_DIR = ".git/info";
     static final String SPARSE_CHECKOUT_FILE_PATH = ".git/info/sparse-checkout";
     static final String TIMEOUT_LOG_PREFIX = " # timeout=";
@@ -465,7 +466,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
      * custom pack programs. Reject a URL if it includes invalid
      * content.
      */
-    private void addCheckedRemoteUrl(@NonNull ArgumentListBuilder args, @NonNull String url) {
+    private void addCheckedRemoteUrl(@NonNull ArgumentListBuilder args, @NonNull String url) throws GitException {
         String trimmedUrl = url.trim();
         /* Don't check for invalid args if URL starts with known good cases.
          * Known good cases include:
@@ -534,6 +535,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return this;
             }
 
+            @Deprecated
             @Override
             public FetchCommand prune() {
                 return prune(true);
@@ -638,12 +640,14 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
     }
 
     /** {@inheritDoc} */
+    @Deprecated
     @Override
     public void fetch(URIish url, List<RefSpec> refspecs) throws GitException, InterruptedException {
         fetch_().from(url, refspecs).execute();
     }
 
     /** {@inheritDoc} */
+    @Deprecated
     @Override
     public void fetch(String remoteName, RefSpec... refspec) throws GitException, InterruptedException {
         listener.getLogger().println("Fetching upstream changes" + (remoteName != null ? " from " + remoteName : ""));
@@ -680,6 +684,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
     }
 
     /** {@inheritDoc} */
+    @Deprecated
     @Override
     public void fetch(String remoteName, RefSpec refspec) throws GitException, InterruptedException {
         fetch(remoteName, new RefSpec[] {refspec});
@@ -734,6 +739,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return this;
             }
 
+            @Deprecated
             @Override
             public CloneCommand shared() {
                 return shared(true);
@@ -745,6 +751,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return this;
             }
 
+            @Deprecated
             @Override
             public CloneCommand shallow() {
                 return shallow(true);
@@ -756,6 +763,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return this;
             }
 
+            @Deprecated
             @Override
             public CloneCommand noCheckout() {
                 // this.noCheckout = true; Since the "clone" command has been replaced with init + fetch, the
@@ -1211,7 +1219,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
     @SuppressFBWarnings(
             value = "RV_DONT_JUST_NULL_CHECK_READLINE",
             justification = "Only needs first line, exception if multiple detected")
-    private @CheckForNull String firstLine(String result) {
+    private @CheckForNull String firstLine(String result) throws GitException {
         BufferedReader reader = new BufferedReader(new StringReader(result));
         String line;
         try {
@@ -1976,7 +1984,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return createTempFileInSystemDir(prefix, suffix);
             }
         }
-        Path tmpPath = Paths.get(workspaceTmp.getAbsolutePath());
+        Path tmpPath = Path.of(workspaceTmp.getAbsolutePath());
         if (workspaceTmp.getAbsolutePath().contains("%")) {
             // Avoid ssh token expansion on all platforms
             return createTempFileInSystemDir(prefix, suffix);
@@ -2098,8 +2106,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
             }
         }
         try {
-            if (credentials instanceof SSHUserPrivateKey) {
-                SSHUserPrivateKey sshUser = (SSHUserPrivateKey) credentials;
+            if (credentials instanceof SSHUserPrivateKey sshUser) {
                 listener.getLogger().println("using GIT_SSH to set credentials " + sshUser.getDescription());
 
                 key = createSshKeyFile(sshUser);
@@ -2130,8 +2137,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                     env.put("DISPLAY", ":");
                 }
 
-            } else if (credentials instanceof StandardUsernamePasswordCredentials) {
-                StandardUsernamePasswordCredentials userPass = (StandardUsernamePasswordCredentials) credentials;
+            } else if (credentials instanceof StandardUsernamePasswordCredentials userPass) {
                 listener.getLogger().println("using GIT_ASKPASS to set credentials " + userPass.getDescription());
 
                 usernameFile = createUsernameFile(userPass);
@@ -2162,7 +2168,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                         String userInfo = null;
                         if (StringUtils.isNotEmpty(proxy.getUserName())) {
                             userInfo = proxy.getUserName();
-                            if (StringUtils.isNotEmpty(proxy.getPassword())) {
+                            if (!Secret.toString(proxy.getSecretPassword()).isEmpty()) {
                                 userInfo += ":" + proxy.getSecretPassword();
                             }
                         }
@@ -2207,7 +2213,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
         // "untrusted" key files.
         // Check that tools exist and then if SELinux subsystem is activated
         // Otherwise calling the tools just pollutes build log with errors
-        if (Files.isExecutable(Paths.get("/usr/bin/chcon"))) {
+        if (Files.isExecutable(Path.of("/usr/bin/chcon"))) {
             // SELinux may actually forbid us to read system paths, so
             // there are a couple of ways to try checking if it is enabled
             // (whether this run needs to worry about security labels) and
@@ -2222,10 +2228,10 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
             try {
                 // A process should always have rights to inspect itself, but
                 // on some systems even this read returns "Invalid argument"
-                if (Files.isRegularFile(Paths.get("/proc/self/attr/current"))) {
+                if (Files.isRegularFile(Path.of("/proc/self/attr/current"))) {
                     String s;
                     try (BufferedReader br =
-                            Files.newBufferedReader(Paths.get("/proc/self/attr/current"), StandardCharsets.UTF_8)) {
+                            Files.newBufferedReader(Path.of("/proc/self/attr/current"), StandardCharsets.UTF_8)) {
                         s = br.readLine();
                     }
                     if ("unconfined".equals(s)) {
@@ -2244,16 +2250,16 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
             }
 
             try {
-                if (!Files.isDirectory(Paths.get("/sys/fs/selinux"))) {
+                if (!Files.isDirectory(Path.of("/sys/fs/selinux"))) {
                     // Assuming that lack of rights to read this is an
                     // exception caught below, not a false return here?
                     return true;
                 }
 
-                if (Files.isRegularFile(Paths.get("/sys/fs/selinux/enforce"))) {
+                if (Files.isRegularFile(Path.of("/sys/fs/selinux/enforce"))) {
                     String s;
                     try (BufferedReader br =
-                            Files.newBufferedReader(Paths.get("/sys/fs/selinux/enforce"), StandardCharsets.UTF_8)) {
+                            Files.newBufferedReader(Path.of("/sys/fs/selinux/enforce"), StandardCharsets.UTF_8)) {
                         s = br.readLine();
                     }
                     if ("0".equals(s)) {
@@ -2292,10 +2298,13 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
 
             if (!clue_sysfs && !clue_proc) { // && !clue_ls
                 listener.getLogger()
-                        .println("[INFO] SELinux is present on the host "
-                                + "and we could not confirm that it does not apply actively: "
-                                + "will try to relabel temporary files now; this may complain "
-                                + "if context labeling not applicable after all");
+                        .println(
+                                """
+                                [INFO] SELinux is present on the host \
+                                and we could not confirm that it does not apply actively: \
+                                will try to relabel temporary files now; this may complain \
+                                if context labeling not applicable after all\
+                                """);
             }
 
             ArgumentListBuilder args = new ArgumentListBuilder();
@@ -2355,7 +2364,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
         }
     }
 
-    private Path createSshKeyFile(SSHUserPrivateKey sshUser) throws IOException {
+    private Path createSshKeyFile(SSHUserPrivateKey sshUser) throws GitException, IOException {
         Path key = createTempFile("ssh", ".key");
         try (BufferedWriter w = Files.newBufferedWriter(key, Charset.forName(encoding))) {
             List<String> privateKeys = sshUser.getPrivateKeys();
@@ -2721,7 +2730,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
 
     private Path createNonBusyExecutable(Path p) throws IOException {
         p.toFile().setExecutable(true, true);
-        Path p_copy = Paths.get(p.toString() + "-copy");
+        Path p_copy = Path.of(p.toString() + "-copy");
 
         // JENKINS-48258 git client plugin occasionally fails with "text file busy" error
         // The following creates a copy of the generated file and deletes the original
@@ -2884,6 +2893,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return this;
             }
 
+            @Deprecated
             @Override
             public PushCommand force() {
                 return force(true);
@@ -2951,7 +2961,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
      * @param fos output of "git branch -v --no-abbrev"
      * @return a {@link java.util.Set} object.
      */
-    /*package*/ Set<Branch> parseBranches(String fos) {
+    /*package*/ Set<Branch> parseBranches(String fos) throws GitException {
         // JENKINS-34309 if the commit message contains line breaks,
         // "git branch -v --no-abbrev" output will include CR (Carriage Return) characters.
         // Replace all CR characters to avoid interpreting them as line endings
@@ -3008,10 +3018,15 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
     @Override
     public Set<Branch> getRemoteBranches() throws GitException, InterruptedException {
         try (Repository db = getRepository()) {
-            Map<String, Ref> refs = db.getAllRefs();
+            List<Ref> refs;
+            try {
+                refs = db.getRefDatabase().getRefs();
+            } catch (IOException ioe) {
+                throw new GitException(ioe);
+            }
             Set<Branch> branches = new HashSet<>();
 
-            for (Ref candidate : refs.values()) {
+            for (Ref candidate : refs) {
                 if (candidate.getName().startsWith(Constants.R_REMOTES)) {
                     Branch buildBranch = new Branch(candidate);
                     if (!GitClient.quietRemoteBranches) {
@@ -3361,6 +3376,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
             private String refspec;
             private List<ObjectId> out;
 
+            @Deprecated
             @Override
             public RevListCommand all() {
                 return all(true);
@@ -3381,6 +3397,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 return this;
             }
 
+            @Deprecated
             @Override
             public RevListCommand firstParent() {
                 return firstParent(true);
@@ -3473,7 +3490,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
 
     /** {@inheritDoc} */
     @Override
-    public boolean isCommitInRepo(ObjectId commit) throws InterruptedException {
+    public boolean isCommitInRepo(ObjectId commit) throws GitException, InterruptedException {
         if (commit == null) {
             return false;
         }
@@ -3582,6 +3599,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
      */
     @SuppressFBWarnings(value = "BC_UNCONFIRMED_CAST_OF_RETURN_VALUE", justification = "JGit interaction with spotbugs")
     @NonNull
+    @Deprecated
     @Override
     public Repository getRepository() throws GitException {
         try {
@@ -3910,7 +3928,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
     /** {@inheritDoc} */
     @Deprecated
     @Override
-    public ObjectId mergeBase(ObjectId id1, ObjectId id2) throws InterruptedException {
+    public ObjectId mergeBase(ObjectId id1, ObjectId id2) throws GitException, InterruptedException {
         try {
             String result;
             try {
@@ -3926,7 +3944,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
                 // Add the SHA1
                 return ObjectId.fromString(line);
             }
-        } catch (IOException | GitException e) {
+        } catch (IOException e) {
             throw new GitException("Error parsing merge base", e);
         }
 
@@ -3936,7 +3954,7 @@ public class CliGitAPIImpl extends LegacyCompatibleGitAPIImpl {
     /** {@inheritDoc} */
     @Deprecated
     @Override
-    public String getAllLogEntries(String branch) throws InterruptedException {
+    public String getAllLogEntries(String branch) throws GitException, InterruptedException {
         // BROKEN: --all and branch are conflicting.
         return launchCommand("log", "--all", "--pretty=format:'%H#%ct'", branch);
     }
